[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/sceneless_scripts/autoload/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/game_objects/BackgroundsTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Props/Bridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/game_objects/WallsTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Props/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Props/GrabbyBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/levels/Transitions.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/game_objects/LevelExit.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/game_objects/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/game_objects/obstacles/Spike.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/sprites/Placeholder_Background.png" type="Texture" id=11]
[ext_resource path="res://src/scenes/levels/prototypes/yummy/Scripts/yjb_lvl_05_random_button.gd" type="Script" id=12]
[ext_resource path="res://World/Props/Spinner.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/scenes/game_objects/DeadZone.tscn" type="PackedScene" id=14]

[node name="yjb_lvl_05_random_button" type="Node2D"]
script = ExtResource( 12 )

[node name="MusicManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="TileMapContainer" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="TileMapContainer"]
visible = false
margin_left = -40.0
margin_top = -72.0
margin_right = 1144.0
margin_bottom = 232.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundsTileMap" parent="TileMapContainer" instance=ExtResource( 2 )]

[node name="WallsTileMap" parent="TileMapContainer" instance=ExtResource( 4 )]
tile_data = PoolIntArray( -131073, 0, 0, -196608, 0, 0, -1, 0, 0, -65536, 0, 0, 65596, 0, 0, 65597, 0, 0, 131132, 0, 0, 131133, 0, 0, 196668, 0, 0, 196669, 0, 0, 262204, 0, 0, 327740, 0, 0, 393276, 0, 0, 458812, 0, 0, 458813, 0, 0, 524348, 0, 0, 524349, 0, 0, 589884, 0, 0, 589885, 0, 0, 655420, 0, 0, 655421, 0, 0, 720897, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720927, 0, 0, 720928, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 851960, 1, 0, 851961, 1, 0, 851962, 1, 0, 851963, 1, 0, 851964, 1, 0, 851965, 1, 0, 851966, 1, 0, 851967, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786479, 0, 0, 786480, 0, 0, 786481, 0, 0, 786482, 0, 0, 786483, 0, 0, 786484, 0, 0, 786485, 0, 0, 786486, 0, 0, 786487, 0, 0, 786488, 0, 0, 786489, 0, 0, 786490, 0, 0, 786491, 0, 0, 786492, 0, 0, 786493, 0, 0, 917496, 1, 0, 851993, 1, 0, 983032, 1, 0, 917529, 1, 0, 1048568, 1, 0, 983065, 1, 0, 1114104, 1, 0, 1048601, 1, 0, 1179640, 1, 0, 1114137, 1, 0, 1245176, 1, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179673, 1, 0, 1310712, 1, 0, 1245209, 1, 0, 1376248, 1, 0, 1310745, 1, 0, 1441784, 1, 0, 1376281, 1, 0, 1507320, 1, 0, 1441817, 1, 0, 1572856, 1, 0, 1507353, 1, 0, 1638392, 1, 0, 1572889, 1, 0, 1703928, 1, 0, 1638425, 1, 0, 1769464, 1, 0, 1703961, 1, 0, 1835000, 1, 0, 1769497, 1, 0, 1900536, 1, 0, 1835033, 1, 0, 1966072, 1, 0, 1966079, 1, 0, 1900544, 1, 0, 1900561, 1, 0, 1900562, 1, 0, 1900569, 1, 0, 2031608, 1, 0, 2031615, 1, 0, 1966098, 1, 0, 1966105, 1, 0, 2097144, 1, 0, 2097147, 1, 0, 2097148, 1, 0, 2097151, 1, 0, 2031634, 1, 0, 2031637, 1, 0, 2031638, 1, 0, 2031641, 1, 0, 2162680, 1, 0, 2162683, 1, 0, 2162684, 1, 0, 2162687, 1, 0, 2097170, 1, 0, 2097173, 1, 0, 2097174, 1, 0, 2097177, 1, 0, 2228223, 1, 0, 2162706, 1, 0, 2293759, 1, 0, 2228242, 1, 0, 2359295, 1, 0, 2293778, 1, 0, 2424831, 1, 0, 2359314, 1, 0, 2490367, 1, 0, 2424832, 1, 0, 2424833, 1, 0, 2424834, 1, 0, 2424835, 1, 0, 2424836, 1, 0, 2424837, 1, 0, 2424838, 1, 0, 2424839, 1, 0, 2424840, 1, 0, 2424841, 1, 0, 2424842, 1, 0, 2424843, 1, 0, 2424844, 1, 0, 2424845, 1, 0, 2424846, 1, 0, 2424847, 1, 0, 2424848, 1, 0, 2424849, 1, 0, 2424850, 1, 0 )

[node name="SpikeContainer" type="Node" parent="."]

[node name="Spike" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( -19.8551, 259.406 )

[node name="Spike2" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( -12.1165, 259.406 )

[node name="Spike3" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( -51.6031, 259.009 )

[node name="Spike4" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( -43.8645, 259.009 )

[node name="Spike5" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 156.148, 259.208 )

[node name="Spike6" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 163.887, 259.208 )

[node name="Spike7" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 187.896, 259.406 )

[node name="Spike8" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 195.635, 259.406 )

[node name="LauncherContainer" type="Node" parent="."]

[node name="ButtonContainer" type="Node" parent="."]

[node name="bot_left_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( -32.2096, 247.789 )

[node name="top_left_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( 23.8895, 103.77 )
rotation = 3.14159

[node name="top_right_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( 128.161, 104.191 )
rotation = 3.14159

[node name="bot_right_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( 176.026, 247.881 )

[node name="wall_right_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( 199.404, 169.352 )
rotation = -1.5708

[node name="wall_left_button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( -55.392, 175.663 )
rotation = 1.5708

[node name="BridgeContainer" type="Node" parent="."]

[node name="Bridge_right" parent="BridgeContainer" instance=ExtResource( 3 )]
position = Vector2( 134.193, 231.756 )
rotation = 4.71239
closedPosition = 3
openedPosition = 2
_bridge_open = false

[node name="Bridge_left" parent="BridgeContainer" instance=ExtResource( 3 )]
position = Vector2( 7.72433, 231.756 )
rotation = 1.5708
closedPosition = 1
openedPosition = 2
_bridge_open = false

[node name="HomingObstContainer" type="Node" parent="."]

[node name="PathObstContainer" type="Node" parent="."]

[node name="GrabableObjsContainer" type="Node" parent="."]

[node name="GrabbyBox" parent="GrabableObjsContainer" instance=ExtResource( 6 )]
position = Vector2( 73.0205, 223.427 )

[node name="PhaseObstContainer" type="Node" parent="."]

[node name="HintBoxContainer" type="Node" parent="."]

[node name="DeadZoneContainer" type="Node" parent="."]

[node name="DeadZone" parent="DeadZoneContainer" instance=ExtResource( 14 )]
position = Vector2( -87.6131, 297.979 )
scale = Vector2( 0.1, 1 )

[node name="DeadZone2" parent="DeadZoneContainer" instance=ExtResource( 14 )]
position = Vector2( 228.27, 298.839 )
scale = Vector2( 0.1, 1 )

[node name="SpinnerContainer" type="Node" parent="."]

[node name="Spinner" parent="SpinnerContainer" instance=ExtResource( 13 )]
position = Vector2( 6.10674, 178.775 )

[node name="Spinner2" parent="SpinnerContainer" instance=ExtResource( 13 )]
position = Vector2( 137.537, 180.506 )

[node name="CheckpointContainer" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 85.6092, 224.827 )
collision_mask = 15

[node name="Transitions" parent="." instance=ExtResource( 7 )]
position = Vector2( -2035.01, -3856.93 )
z_index = 10

[node name="LevelExit" parent="." instance=ExtResource( 8 )]
position = Vector2( 71.06, 290.056 )
[connection signal="button_just_pressed" from="ButtonContainer/bot_left_button" to="." method="_on_bot_left_button_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/top_left_button" to="." method="_on_top_left_button_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/top_right_button" to="." method="_on_top_right_button_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/bot_right_button" to="." method="_on_bot_right_button_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/wall_right_button" to="." method="_on_wall_right_button_button_just_pressed"]
[connection signal="button_just_pressed" from="ButtonContainer/wall_left_button" to="." method="_on_wall_left_button_button_just_pressed"]
